MomoAndroid/MomoAndroid/MomoAndroid.NativeActivity/x86/Debug/MomoAndroid.NativeActivity.log
Build started 11/09/2015 08:09:27.
     1>Project "D:\dev\Momo\Main\Code\MomoAndroid\MomoAndroid\MomoAndroid.NativeActivity\MomoAndroid.NativeActivity.vcxproj" on node 2 (Build target(s)).
     1>SetBuildDefaultEnvironmentVariables:
         ANDROID_HOME=C:\Program Files (x86)\Android\android-sdk
         ANT_HOME=C:\Program Files (x86)\Microsoft Visual Studio 14.0\Apps\apache-ant-1.9.3\
         JAVA_HOME=C:\Program Files (x86)\Java\jdk1.7.0_55
         NDK_ROOT=C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\
       ClCompile:
         C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\toolchains\llvm-3.6\prebuilt\windows\bin\clang.exe -c -fdiagnostics-format=msvc -gcc-toolchain "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\toolchains\x86-4.9\prebuilt\windows" -target "i686-none-linux-androideabi" --sysroot="C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\platforms\android-19\arch-x86" -I D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include -I D:\dev\Momo\Main\Code\MomoAndroid\..\Game\Include -I "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\platforms\android-19\arch-x86\usr\include" -I "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\sources\cxx-stl\gnu-libstdc++\4.9\include" -I "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\sources\cxx-stl\gnu-libstdc++\4.9\libs\x86\include" -I "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\sources\cxx-stl\gnu-libstdc++\4.9\include\backward" -I "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\toolchains\llvm-3.6\prebuilt\windows\lib\clang\3.6\include" -g2 -gdwarf-2 -o "x86\Debug\pch.h.gch" -Wall -O0 -fno-strict-aliasing -fno-omit-frame-pointer -fno-exceptions -fstack-protector -fpic -fno-short-enums -fno-rtti -x c++-header pch.h
         pch.h
         C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\toolchains\llvm-3.6\prebuilt\windows\bin\clang.exe -c -fdiagnostics-format=msvc -gcc-toolchain "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\toolchains\x86-4.9\prebuilt\windows" -target "i686-none-linux-androideabi" --sysroot="C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\platforms\android-19\arch-x86" -I D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include -I D:\dev\Momo\Main\Code\MomoAndroid\..\Game\Include -I "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\platforms\android-19\arch-x86\usr\include" -I "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\sources\cxx-stl\gnu-libstdc++\4.9\include" -I "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\sources\cxx-stl\gnu-libstdc++\4.9\libs\x86\include" -I "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\sources\cxx-stl\gnu-libstdc++\4.9\include\backward" -I "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\\toolchains\llvm-3.6\prebuilt\windows\lib\clang\3.6\include" -g2 -gdwarf-2 -o "x86\Debug\Character.o" -Wall -O0 -fno-strict-aliasing -fno-omit-frame-pointer -fno-exceptions -fstack-protector -fpic -fno-short-enums -fno-rtti -x c++ -include x86\Debug\pch.h ..\..\..\Game\Source\Character.cpp
         Character.cpp
         In file included from ..\..\..\Game\Source\Character.cpp:1:
         In file included from D:\dev\Momo\Main\Code\MomoAndroid\..\Game\Include\Character.h:5:
         In file included from D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include\Rectangle.h:4:
         In file included from D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include/Momo.h:8:
     1>D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include/Types.h(24,9): error : unknown type name '__int64'; did you mean '__int64_t'?
         typedef __int64 s64;
                 ^~~~~~~
                 __int64_t
         C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\platforms\android-19\arch-x86\usr\include\machine/_types.h(46,20) :  note: '__int64_t' declared here
         typedef long long               __int64_t;
                                         ^
         In file included from ..\..\..\Game\Source\Character.cpp:1:
         In file included from D:\dev\Momo\Main\Code\MomoAndroid\..\Game\Include\Character.h:5:
         In file included from D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include\Rectangle.h:4:
         In file included from D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include/Momo.h:8:
     1>D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include/Types.h(25,25): error : expected ';' after top level declarator
         typedef unsigned __int64 u64;
                                 ^
                                 ;
         In file included from ..\..\..\Game\Source\Character.cpp:7:
     1>D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include\GameTime.h(11,9): error : unknown type name 'u64'
                 static u64 SecondsToMilliseconds(float value);
                        ^
     1>D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include\GameTime.h(12,37): error : unknown type name 'u64'
                 static float MillisecondsToSeconds(u64 value);
                                                    ^
     1>D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include\GameTime.h(18,14): error : unknown type name 'u64'
                 void Update(u64 tick);
                             ^
     1>D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include\GameTime.h(20,2): error : unknown type name 'u64'
                 u64 GetDeltaMilliseconds() const;
                 ^
     1>D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include\GameTime.h(23,2): error : unknown type name 'u64'
                 u64 GetCurrentTick() const { return mCurrentTick; }
                 ^
     1>D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include\GameTime.h(24,2): error : unknown type name 'u64'
                 u64 GetPreviousTick() const { return mPreviousTick; }
                 ^
     1>D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include\GameTime.h(29,2): error : unknown type name 'u64'
                 u64 mCurrentTick;
                 ^
     1>D:\dev\Momo\Main\Code\MomoAndroid\..\Momo\Include\GameTime.h(30,2): error : unknown type name 'u64'
                 u64 mPreviousTick;
                 ^
         10 errors generated.
     1>Done Building Project "D:\dev\Momo\Main\Code\MomoAndroid\MomoAndroid\MomoAndroid.NativeActivity\MomoAndroid.NativeActivity.vcxproj" (Build target(s)) -- FAILED.

Build FAILED.

Time Elapsed 00:00:00.43
